chore: am plugin handlers extend AbstractPluginHandler